--- a/index.html
+++ b/index.html
@@ -12,12 +12,24 @@
   <nav class="cont">
       <img src="./img/logo.png" alt="questo è il logo di Neori"></img>
       <ul>
-         <li>Features</li>
-         <li>Editorials</li>
-         <li>Environment</li>
-         <li>Blog</li>
-         <li>Shop</li>
-         <li>Contact</li>
+         <li>
+             <a href="#">Features</a>
+         </li>
+         <li>
+             <a href="#">Editorials</a>
+         </li>
+         <li>
+             <a href="#">Environment</a>
+            </li>
+         <li>
+             <a href="#">Blog</a>
+         </li>
+         <li>
+             <a href="#">Shop</a>
+        </li>
+         <li>
+             <a href="#">Contact</a>
+        </li> 
       </ul>
   </nav>
 
