dark con logo in negativo

--- a/index.html
+++ b/index.html
@@ -10,35 +10,36 @@
 <body>
 
   <nav class="cont">
-      <img src="./img/logo.png" alt="questo è il logo di Neori"></img>
+    <img src="./img/logo.png" alt="questo è il logo di Neori"></img>
       <ul>
-         <li>
-             <a href="#">Features</a>
-         </li>
-         <li>
-             <a href="#">Editorials</a>
-         </li>
-         <li>
-             <a href="#">Environment</a>
-            </li>
-         <li>
-             <a href="#">Blog</a>
-         </li>
-         <li>
-             <a href="#">Shop</a>
+        <li>
+          <a href="#">Features</a>
         </li>
-         <li>
-             <a href="#">Contact</a>
-        </li> 
-      </ul>
+        <li>
+          <a href="#">Editorials</a>
+        </li>
+        <li>
+          <a href="#">Environment</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">Shop</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+      </li> 
+    </ul>
   </nav>
 
-  <header class="cont">
-      <img src="./img/img-1.jpg" alt="l'immagine rappresenta il relax della meditazione">
+  <header class="cont rad">
+    <div class="layer rad">
       <div class="text-in-img">
-         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, consequuntur</h2>
-         <p>Consectetur adipisicing elit. Distinctio magni aliquam natus reprehenderit veniam, eaque nemo eius fuga voluptas, ducimus, quas dolorum.</p>
+      <h2>Lorem ipsum dolor sit amet sit amet adipisicing elit sit amet. </h2>
+      <p>Consectetur adipisicing elit. Distinctio magni aliquam natus reprehenderit veniam, eaque nemo eius fuga voluptas, ducimus, quas dolorum.</p>
       </div>
+    </div>
   </header >
 
   <main class="cont clear-fix">
@@ -50,21 +51,27 @@
     </section> 
     <!-- pima colonna -->
     <section class="float first">
-         <img src="./img/img-2.jpg" alt="occuparsi delle piante">
-         <h4>Lorem</h4>
-         <p>Elit. Aliquid libero explicabo et facilis sint dolor eos error maiores eaque dolore commodi suscipit minus nemo esse, odit aperiam atque vel similique quisquam beatae laborum omnis? Repudiandae, atque.</p>
+      <div class="box-img rad">
+        <div class="layer rad"></div>
+      </div>       
+      <h4>Lorem</h4>
+      <p>Elit. Aliquid libero explicabo et facilis sint dolor eos error maiores eaque dolore commodi suscipit minus nemo esse, odit aperiam atque vel similique quisquam beatae laborum omnis? Repudiandae, atque.</p>
     </section>
       <!-- seconda colonna -->
     <section class="float middle">
-         <img src="./img/img-3.jpg" alt="occuparsi delle piante">
-         <h4>Lorem</h4>
-         <p> Repudiandae, atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam modi labore repellat? Laudantium tempora officia odit molestiae ipsam temporibus distinctio, quis s unde, eveniet corporis neque quo, natus velit mollitia! Id autem libero placeat corrupti! Quod, explicabo expedita dolorem quidem aliquid et? Dicta? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, hic repellat tempora deleniti beatae dolores. Qui hic, ex dolorem aliquid repudiandae ipsa reprehenderit similique officiis. Quis distinctio repudiandae tenetur quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus odit illo, harum rem ab temporibus totam deserunt maxime eligendi in maiores incidunt sit. Cumque doloremque voluptas modi ducimus voluptate? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum ducimus ut animi doloremque laboriosam ratione soluta voluptatem inventore blanditiis quo consectetur incidunt, fugiat facere corporis magni deserunt veritatis aperiam cum!</p>
+       <div class="box-img rad">
+         <div class="layer rad"></div>
+       </div>       
+       <h4>Lorem</h4>
+      <p> Repudiandae, atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam modi labore repellat? Laudantium tempora officia odit molestiae ipsam temporibus distinctio, quis s unde, eveniet corporis neque quo, natus velit mollitia! Id autem libero placeat corrupti! Quod, explicabo expedita dolorem quidem aliquid et? Dicta? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, hic repellat tempora deleniti beatae dolores. Qui hic, ex dolorem aliquid repudiandae ipsa reprehenderit similique officiis. Quis distinctio repudiandae tenetur quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus odit illo, harum rem ab temporibus totam deserunt maxime eligendi in maiores incidunt sit. Cumque doloremque voluptas modi ducimus voluptate? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum ducimus ut animi doloremque laboriosam ratione soluta voluptatem inventore blanditiis quo consectetur incidunt, fugiat facere corporis magni deserunt veritatis aperiam cum!</p>
     </section>
     <!-- terza colonna -->
-    <section class="float last">
-         <img src="./img/img-4.jpg" alt="occuparsi delle piante">
-         <h4>Lorem</h4>
-         <p>Elit. Aliquid libero explicabo et facilis sint dolor eos error maiores eaque dolore commodi suscipit minus nemo esse, odit aperiam atque vel similique quisquam beatae laborum omnis? Repudiandae, atque.</p>
+    <section class="float last">   
+      <div class="box-img rad">
+        <div class="layer rad"></div>
+      </div>        
+      <h4>Lorem</h4>
+      <p>Elit. Aliquid libero explicabo et facilis sint dolor eos error maiores eaque dolore commodi suscipit minus nemo esse, odit aperiam atque vel similique quisquam beatae laborum omnis? Repudiandae, atque.</p>
     </section>
   </main>
 
