--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <!-- <link rel="stylesheet" href="dark.css"> -->
+  <!-- <link rel="stylesheet" href="index.css"> -->
+  <link rel="stylesheet" href="dark.css">
   <title>html scheletro</title>
 </head>
 <body>
